# core-auto-app

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: autostart.sh
src/core_auto_app/: main.py
src/core_auto_app/application/: application.py  interfaces.py
src/core_auto_app/detector/: object_class.py  object_detector.py  tracker_utils.py
src/core_auto_app/detector/aiming/: aiming_service.py  aiming_target_selector.py
src/core_auto_app/domain/: messages.py  object_detector.py
src/core_auto_app/infra/: cv_presenter.py  realsense_camera.py  serial_robot_driver.py  usb_camera.py
tests/: test_object_detector.py  test_serial_robot_driver.py
tmp_test/: camera_feed.py  tracking.py
