[project]
name = "core-auto-app"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "onnxruntime>=1.16.3",
    "opencv-python ; platform_machine != 'aarch64'",
    "pyrealsense2 ; platform_machine != 'aarch64'",
    "pydantic>=2.5.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "core_auto_app:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core_auto_app"]
