[project]
name = "core-auto-app"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.24.4",
    "opencv-python ; platform_machine != 'aarch64'",
    "pyrealsense2 ; platform_machine != 'aarch64'",
    "pydantic>=2.5.3",
    "torch==2.1.0; platform_machine != 'aarch64'",
    "torch @ https://developer.download.nvidia.cn/compute/redist/jp/v512/pytorch/torch-2.1.0a0+41361538.nv23.06-cp38-cp38-linux_aarch64.whl ; platform_machine == 'aarch64'",
    "torchvision==0.16.0; platform_machine != 'aarch64'",
    "torchvision @ git+https://github.com/pytorch/vision.git@v0.16.0 ; platform_machine == 'aarch64'",
    "mmdet>=3.3.0",
    "mmcv>=2.0.0rc4",
    "mmengine>=0.7.0",
    "openmim>=0.3.9",
    "Cython>=3.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
core_auto_app = "core_auto_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core_auto_app"]
