[project]
name = "core-auto-app"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.24.4",
    "opencv-python ; platform_machine != 'aarch64'",
    "pyrealsense2 ; platform_machine != 'aarch64'",
    "pydantic>=2.5.3",
    "pyserial>=3.5",
    "pillow>=10.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
core_auto_app = "core_auto_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.2.0",
    "pytest>=7.4.4",
    "mypy>=1.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/core_auto_app"]
